set default data select for plot

--- a/notebooks/compare_trials_conv.ipynb
+++ b/notebooks/compare_trials_conv.ipynb
@@ -135,7 +135,7 @@
     "                                   disabled = disabled, layout = widgets.Layout(width = '95%'))\n",
     "\n",
     "data_select_label  = widgets.Label('mitsuba data 1')\n",
-    "data_select        = widgets.Dropdown(options = data_dir_ch, description = '', disabled = False) \n",
+    "data_select        = widgets.Dropdown(options = data_dir_ch, value = 'tests/chowdhary/v3/trials_10/', description = '', disabled = False) \n",
     "data_select_label2 = widgets.Label('mitsuba data 2')\n",
     "data_select2       = widgets.Dropdown(options = ['None'] + data_dir_ch, description = '', disabled = False)\n",
     "data_select_box    = widgets.HBox(children = [data_select_label, data_select])\n",
