--- a/notebooks/compare_trials_conv.ipynb
+++ b/notebooks/compare_trials_conv.ipynb
@@ -23,11 +23,12 @@
     "\n",
     "---\n",
     "File directories:\n",
-    "- v1: with precision bug (increased error at very high sample counts)\n",
-    "- v2: precision bug fixed, Q/U Stokes vector incorrect (memory bug)\n",
-    "- v3: both precision bug and memory bug fixed\n",
+    "- most_recent_results (tests from the weeks of 7/4-7/15, all known bugs fixed)\n",
     "\n",
-    "Written by Kate 06/22"
+    "---\n",
+    "When data is not available for a particular set of parameters, relative error will be 100% for all sample counts.\n",
+    "\n",
+    "Written by Kate 07/11"
    ]
   },
   {
@@ -67,17 +68,14 @@
     "φ_ch       = np.array([0.0, 60.0, 180.0, 240.0])\n",
     "\n",
     "# Available Mitsuba data in direct comparison to Chowdhary et al.\n",
-    "models_ch_ = ['AOS_1']\n",
-    "λ_ch_      = np.array([350., 450., 550.])\n",
+    "models_ch_ = ['AOS_1', 'AOS_2', 'AOS_3']\n",
+    "λ_ch_      = np.array([350., 450., 550., 650.])\n",
     "θp_ch_     = np.array([30.0, 60.0])\n",
     "θs_ch_     = np.linspace(0.0, 60.0, 7)\n",
     "φ_ch_      = np.array([0.0])\n",
     "\n",
     "# Where to pull Mitsuba data from\n",
-    "data_dir_ch = ['tests/chowdhary/v1/trials_10/',\n",
-    "               'tests/chowdhary/v1/trials_50/',\n",
-    "               'tests/chowdhary/v2/trials_10/',\n",
-    "               'tests/chowdhary/v3/trials_10/']\n",
+    "data_dir_ch = ['tests/chowdhary/most_recent_results/']\n",
     "\n",
     "from parse_natraj_data import parse_file\n",
     "\n",
@@ -135,7 +133,7 @@
     "                                   disabled = disabled, layout = widgets.Layout(width = '95%'))\n",
     "\n",
     "data_select_label  = widgets.Label('mitsuba data 1')\n",
-    "data_select        = widgets.Dropdown(options = data_dir_ch, value = 'tests/chowdhary/v3/trials_10/', description = '', disabled = False) \n",
+    "data_select        = widgets.Dropdown(options = data_dir_ch, value = 'tests/chowdhary/most_recent_results/', description = '', disabled = False) \n",
     "data_select_label2 = widgets.Label('mitsuba data 2')\n",
     "data_select2       = widgets.Dropdown(options = ['None'] + data_dir_ch, description = '', disabled = False)\n",
     "data_select_box    = widgets.HBox(children = [data_select_label, data_select])\n",
@@ -173,7 +171,9 @@
     "ui_ch    = [λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui]\n",
     "ui_na    = [τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui]\n",
     "\n",
-    "ui = widgets.VBox(children = ui_const + ui_ch)"
+    "data_warning = widgets.Label('When data is not available for a particular set of parameters, relative error will be 100% for all sample counts.')\n",
+    "\n",
+    "ui = widgets.VBox(children = ui_const + ui_ch + [data_warning])"
    ]
   },
   {
@@ -303,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbbca3778a514354be712bafc3514bea",
+       "model_id": "a264a64abb234627871a6fab71b10464",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,13 +317,14 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c846799092a4467aa990e619cc5500d6",
+       "model_id": "a2b03142f9984b9f9c52f8415e8cd06f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'error_y': {'array': array([4.44483467e+01, 6.87381879e+00, 2.05996747e+00, 6.096…"
+       "    'data': [{'error_y': {'array': array([1.88926598, 0.53512009, 0.18739859, 0.05033294]),\n",
+       "   …"
       ]
      },
      "metadata": {},
@@ -519,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
