add variance option to plots, new data

--- a/notebooks/compare_trials_conv.ipynb
+++ b/notebooks/compare_trials_conv.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "---\n",
     "File directories:\n",
-    "- most_recent_results (tests from the weeks of 7/4-7/15, all known bugs fixed)\n",
+    "- TODO\n",
     "\n",
     "---\n",
     "When data is not available for a particular set of parameters, relative error will be 100% for all sample counts.\n",
@@ -75,7 +75,12 @@
     "φ_ch_      = np.array([0.0])\n",
     "\n",
     "# Where to pull Mitsuba data from\n",
-    "data_dir_ch = ['tests/chowdhary/most_recent_results/']\n",
+    "data_dir_ch = ['aos1_aos2_good',\n",
+    "               'aos3_bug',\n",
+    "               'test_aos2_no_reflection',\n",
+    "               'test_aos3_smooth_surface',\n",
+    "               'test_aos3_analytic_nee']\n",
+    "\n",
     "\n",
     "from parse_natraj_data import parse_file\n",
     "\n",
@@ -133,12 +138,13 @@
     "                                   disabled = disabled, layout = widgets.Layout(width = '95%'))\n",
     "\n",
     "data_select_label  = widgets.Label('mitsuba data 1')\n",
-    "data_select        = widgets.Dropdown(options = data_dir_ch, value = 'tests/chowdhary/most_recent_results/', description = '', disabled = False) \n",
+    "data_select        = widgets.Dropdown(options = data_dir_ch, description = '', disabled = False) \n",
     "data_select_label2 = widgets.Label('mitsuba data 2')\n",
     "data_select2       = widgets.Dropdown(options = ['None'] + data_dir_ch, description = '', disabled = False)\n",
     "data_select_box    = widgets.HBox(children = [data_select_label, data_select])\n",
     "data_select_box2   = widgets.HBox(children = [data_select_label2, data_select2])\n",
     "\n",
+    "error_select  = widgets.ToggleButtons(options = ['error', 'variance'], description = 'data type', disabled = False)\n",
     "model_select  = widgets.ToggleButtons(options = models_ch_, description = 'model', disabled = False) \n",
     "stokes_select = widgets.ToggleButtons(options = ['I', 'Q', 'U', 'DOP'], description = 'stokes', disabled = False,\n",
     "                    tooltips = ['Total radiance', \n",
@@ -167,7 +173,7 @@
     "\n",
     "source_options = widgets.HBox(children = [source_label, source_ch, source_na])\n",
     "\n",
-    "ui_const = [source_options, data_select_box, data_select_box2, stokes_select, model_select]\n",
+    "ui_const = [source_options, data_select_box, data_select_box2, error_select, stokes_select, model_select]\n",
     "ui_ch    = [λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui]\n",
     "ui_na    = [τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui]\n",
     "\n",
@@ -303,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a264a64abb234627871a6fab71b10464",
+       "model_id": "492760672aaa41bb82e6b4eb7da36cd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,7 +323,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2b03142f9984b9f9c52f8415e8cd06f",
+       "model_id": "94b5339ae8ea4375998c3ca7e1709db7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -363,10 +369,16 @@
     "fig.update_xaxes(type = 'log')\n",
     "fig.update_yaxes(type = 'log')\n",
     "\n",
-    "def update(source_selected, data_select, data_select2, stokes_select, model_select, \n",
+    "def update(source_selected, data_select, data_select2, stokes_select, model_select, error_select,\n",
     "           λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui,\n",
     "           τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui):\n",
-    "      \n",
+    "    \n",
+    "    if source_selected == 'chowdhary':\n",
+    "        data_select = 'tests/chowdhary/' + data_select + '/trials_10/'\n",
+    "        \n",
+    "        if data_select2 != 'None':\n",
+    "            data_select2 = 'tests/chowdhary/' + data_select2 + 'trials_10/'\n",
+    "        \n",
     "    # Load Mitsuba data\n",
     "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
     "    data_mts = np.load(model_file)\n",
@@ -420,6 +432,8 @@
     "    rel_error_mean = np.mean(rel_error, axis = 1)\n",
     "    rel_error_std  = np.std(rel_error, axis = 1)\n",
     "    \n",
+    "    variance = np.var(data_mts_new, axis = 1)\n",
+    "    \n",
     "    if data_mts2 is not None:\n",
     "        x_samples2 = n_samples if data_mts_new2.shape[0] == len(n_samples) else n_samples_alt\n",
     "        n_trials2 = data_mts_new2.shape[1]\n",
@@ -434,38 +448,56 @@
     "        rel_error2 = np.abs((data_mts_new2 - data_ref_fill2) / data_ref_fill2 * 100.0)\n",
     "        rel_error_mean2 = np.mean(rel_error2, axis = 1)\n",
     "        rel_error_std2  = np.std(rel_error2, axis = 1)\n",
+    "        \n",
+    "        variance2 = np.var(data_mts_new2, axis = 1)\n",
     "\n",
     "    # Update plots\n",
     "    with fig.batch_update():\n",
-    "        if stokes_select == 'DOP' or not np.all(data_ref_fill): # np.all(): check for zeros / divide by zero\n",
-    "            label = 'Abs Error (' + data_select + ')'\n",
-    "            y_data = abs_error_mean\n",
-    "            y_std  = abs_error_std\n",
-    "            \n",
-    "            if data_mts2 is not None:\n",
-    "                label2 = 'Abs Error (' + data_select2 + ')'\n",
-    "                y_data2 = abs_error_mean2\n",
-    "                y_std2  = abs_error_std2\n",
+    "        if error_select == 'error':\n",
+    "            if stokes_select == 'DOP' or not np.all(data_ref_fill): # np.all(): check for zeros / divide by zero\n",
+    "                fig.update_yaxes(title_text = 'Abs Error')\n",
+    "                title_text = '% Error'\n",
+    "                label = 'Abs Error (' + data_select + ')'\n",
+    "                y_data = abs_error_mean\n",
+    "                y_std  = abs_error_std\n",
+    "\n",
+    "                if data_mts2 is not None:\n",
+    "                    label2 = 'Abs Error (' + data_select2 + ')'\n",
+    "                    y_data2 = abs_error_mean2\n",
+    "                    y_std2  = abs_error_std2\n",
+    "\n",
+    "            else:\n",
+    "                fig.update_yaxes(title_text = '% Error')\n",
+    "                label = '% Error (' + data_select + ')'\n",
+    "                y_data = rel_error_mean\n",
+    "                y_std  = rel_error_std\n",
+    "\n",
+    "                if data_mts2 is not None:\n",
+    "                    label2 = '% Error (' + data_select2 + ')'\n",
+    "                    y_data2 = rel_error_mean2\n",
+    "                    y_std2  = rel_error_std2\n",
     "        else:\n",
-    "            label = '% Error (' + data_select + ')'\n",
-    "            y_data = rel_error_mean\n",
-    "            y_std  = rel_error_std\n",
+    "            fig.update_yaxes(title_text = 'Variance')\n",
+    "            label = 'Variance (' + data_select + ')'\n",
+    "            y_data = variance\n",
+    "            y_std = np.zeros_like(y_data)\n",
     "            \n",
     "            if data_mts2 is not None:\n",
-    "                label2 = '% Error (' + data_select2 + ')'\n",
-    "                y_data2 = rel_error_mean2\n",
-    "                y_std2  = rel_error_std2\n",
+    "                    label2 = 'Variance (' + data_select2 + ')'\n",
+    "                    y_data2 = variance2\n",
+    "                    y_std2  = np.zeros_like(y_data2)\n",
+    "                    \n",
     "        \n",
     "        fig.data[0].name = label\n",
     "        fig.data[0].x = x_samples\n",
-    "        fig.data[0].y = rel_error_mean if np.all(data_ref_fill) else abs_error_mean\n",
-    "        fig.data[0].error_y.array = rel_error_std if np.all(data_ref_fill) else abs_error_std\n",
+    "        fig.data[0].y = y_data\n",
+    "        fig.data[0].error_y.array = y_std\n",
     "        \n",
     "        if data_mts2 is not None:\n",
     "            fig.data[1].name = label2\n",
     "            fig.data[1].x = x_samples2\n",
-    "            fig.data[1].y = rel_error_mean2 if np.all(data_ref_fill2) else abs_error_mean2\n",
-    "            fig.data[1].error_y.array = rel_error_std2 if np.all(data_ref_fill2) else abs_error_std2\n",
+    "            fig.data[1].y = y_data2\n",
+    "            fig.data[1].error_y.array = y_std2\n",
     "        else:\n",
     "            fig.data[1].name = ''\n",
     "            fig.data[1].x = n_samples\n",
@@ -477,6 +509,7 @@
     "                                          'data_select2': data_select2,\n",
     "                                          'stokes_select': stokes_select, \n",
     "                                          'model_select': model_select,\n",
+    "                                          'error_select': error_select,\n",
     "                                          'λ_ch_ui': λ_ch_ui, \n",
     "                                          'θp_ch_ui': θp_ch_ui, \n",
     "                                          'θs_ch_ui': θs_ch_ui, \n",
