--- a/notebooks/compare_trials_conv.ipynb
+++ b/notebooks/compare_trials_conv.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b400de72",
    "metadata": {},
    "source": [
     "# Playground for analysis of Mitsuba vs. reference data\n",
@@ -16,14 +15,17 @@
     "- AOS 4: Rayleigh atmosphere, rough ocean surface, ocean body with tabulated/Mie-Rayleigh blended phase function\n",
     "\n",
     "---\n",
+    "Zhai. Successive orders of scattering method used in same \"Testbed results\" paper as above.\n",
+    "\n",
+    "Models:\n",
+    "- AOS 3: Rayleigh atmosphere, *smooth* ocean surface, Rayleigh ocean body\n",
+    "\n",
+    "\n",
+    "---\n",
     "Natraj et al. \"Rayleigh Scattering in Planetary Atmospheres: Corrected Tables through Accurate Computation of X and Y Functions\" 2009.\n",
     "\n",
     "Models:\n",
     "- AOS 1*: Rayleigh atmosphere (variable optical depth tau), black ocean surface\n",
-    "\n",
-    "---\n",
-    "File directories:\n",
-    "- TODO\n",
     "\n",
     "---\n",
     "When data is not available for a particular set of parameters, relative error will be 100% for all sample counts.\n",
@@ -34,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "60635ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +51,13 @@
     "from plotly.subplots import make_subplots\n",
     "from ipywidgets import widgets, interact\n",
     "\n",
-    "from parse_egap_data import get_data"
+    "from parse_egap_data import get_data as get_data_ch\n",
+    "from parse_sos_data import get_data as get_data_zh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4629b107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,16 +72,12 @@
     "models_ch_ = ['AOS_1', 'AOS_2', 'AOS_3']\n",
     "λ_ch_      = np.array([350., 450., 550., 650.])\n",
     "θp_ch_     = np.array([30.0, 60.0])\n",
-    "θs_ch_     = np.linspace(0.0, 60.0, 7)\n",
+    "θs_ch_     = np.linspace(0.0, 60.0, 13)\n",
     "φ_ch_      = np.array([0.0])\n",
     "\n",
     "# Where to pull Mitsuba data from\n",
-    "data_dir_ch = ['aos1_aos2_good',\n",
-    "               'aos3_bug',\n",
-    "               'test_aos2_no_reflection',\n",
-    "               'test_aos3_smooth_surface',\n",
-    "               'test_aos3_analytic_nee']\n",
-    "\n",
+    "data_dir_ch = ['mitsuba_data/chowdhary/']\n",
+    "data_dir_zh = ['mitsuba_data/zhai/']\n",
     "\n",
     "from parse_natraj_data import parse_file\n",
     "\n",
@@ -113,11 +110,11 @@
     "μs_na_     = np.array([0.1, 0.32, 0.52, 0.72, 1.0])\n",
     "φ_na_      = np.array([0.0])\n",
     "\n",
-    "data_dir_na = ['tests/natraj/v1/trials_10/',\n",
-    "               'tests/natraj/v1/trials_50/',\n",
-    "               'tests/natraj/v2/trials_10/',\n",
-    "               'tests/natraj/v2/trials_50/',\n",
-    "               'tests/natraj/v3/trials_10/']\n",
+    "data_dir_na = ['mitsuba_data/natraj/v1/trials_10/',\n",
+    "               'mitsuba_data/natraj/v1/trials_50/',\n",
+    "               'mitsuba_data/natraj/v2/trials_10/',\n",
+    "               'mitsuba_data/natraj/v2/trials_50/',\n",
+    "               'mitsuba_data/natraj/v3/trials_10/']\n",
     "\n",
     "n_samples     = np.array([1e3, 1e4, 1e5, 1e6, 1e7, 1e8, 1e9])\n",
     "n_samples_alt = np.array([1e3, 1e4, 1e5, 1e6]) * 32 * 32"
@@ -126,7 +123,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fcc61922",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,10 +164,11 @@
     "# Chowdhary or Natraj\n",
     "source_label = widgets.Label('source')\n",
     "source_ch    = widgets.Button(description = 'chowdhary', disabled = False, button_style = '')\n",
+    "source_zh    = widgets.Button(description = 'zhai', disabled = False, button_style = '')\n",
     "source_na    = widgets.Button(description = 'natraj', disabled = False, button_style = '')\n",
     "source_selected = widgets.Label(value = 'chowdhary')\n",
     "\n",
-    "source_options = widgets.HBox(children = [source_label, source_ch, source_na])\n",
+    "source_options = widgets.HBox(children = [source_label, source_ch, source_zh, source_na])\n",
     "\n",
     "ui_const = [source_options, data_select_box, data_select_box2, error_select, stokes_select, model_select]\n",
     "ui_ch    = [λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui]\n",
@@ -185,7 +182,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ec5f7066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +202,7 @@
     "    ts  = np.where(θs == θs_ch)[0][0]\n",
     "    s   = stokes2idx(stokes) + 1 # +1 since for this dataset the first column is θs angle\n",
     "    \n",
-    "    data_tmp = get_data('../egap_data', model, θp, φ, λ)\n",
+    "    data_tmp = get_data_ch('../egap_data', model, θp, φ, λ)\n",
     "    \n",
     "    return data_tmp[:,s][ts]\n",
     "        \n",
@@ -224,6 +220,28 @@
     "    μp = np.cos(np.deg2rad(θp))\n",
     "    data_tmp /= μp\n",
     "\n",
+    "    return data_tmp\n",
+    "\n",
+    "# Get Zhai reference data\n",
+    "def get_ref_zh_stokes(model, stokes, λ, θp, θs, φ):\n",
+    "    ts  = np.where(θs == θs_ch)[0][0]\n",
+    "    s   = stokes2idx(stokes)\n",
+    "    \n",
+    "    data_tmp = get_data_zh('../sos_data', model, θp, φ, λ)\n",
+    "    \n",
+    "    return data_tmp[:,s][ts]\n",
+    "        \n",
+    "# Get Mitsuba data relating to Zhai et al. parameters\n",
+    "def get_mts_zh_stokes(data, stokes, λ, θp, θs, φ):\n",
+    "    w  = np.where(λ  == λ_ch_)[0][0]\n",
+    "    tp = np.where(θp == θp_ch_)[0][0]\n",
+    "    ts = np.where(θs == θs_ch_)[0][0]\n",
+    "    p  = np.where(φ  == φ_ch_)[0][0]\n",
+    "    s  = stokes2idx(stokes)\n",
+    "    \n",
+    "    data_tmp = data[w, tp, ts, p, :, s, :]\n",
+    "        \n",
+    "    # Do not need to convert to reflectance quantity since Zhai data is given in radiance\n",
     "    return data_tmp\n",
     "\n",
     "# Get Natraj et al. reference data\n",
@@ -249,7 +267,7 @@
     "def get_ref_ch_dop(model, λ, θp, θs, φ):\n",
     "    ts  = np.where(θs == θs_ch)[0][0]\n",
     "    \n",
-    "    data_tmp = get_data('../egap_data', model, θp, φ, λ)\n",
+    "    data_tmp = get_data_ch('../egap_data', model, θp, φ, λ)\n",
     "    \n",
     "    si = data_tmp[:,1][ts]\n",
     "    sq = data_tmp[:,2][ts]\n",
@@ -274,6 +292,32 @@
     "    sq /= μp\n",
     "    su /= μp\n",
     "\n",
+    "    return dop(si, sq, su)\n",
+    "\n",
+    "# Get Zhai et al. reference data and calculate DOP\n",
+    "def get_ref_zh_dop(model, λ, θp, θs, φ):\n",
+    "    ts  = np.where(θs == θs_ch)[0][0]\n",
+    "    \n",
+    "    data_tmp = get_data_zh('../sos_data', model, θp, φ, λ)\n",
+    "    \n",
+    "    si = data_tmp[:,0][ts]\n",
+    "    sq = data_tmp[:,1][ts]\n",
+    "    su = data_tmp[:,2][ts]\n",
+    "    \n",
+    "    return dop(si, sq, su)\n",
+    "\n",
+    "# Get Mitsuba data relating to Zhai parameters and calculate DOP\n",
+    "def get_mts_ch_dop(data, λ, θp, θs, φ):\n",
+    "    w  = np.where(λ  == λ_ch_)[0][0]\n",
+    "    tp = np.where(θp == θp_ch_)[0][0]\n",
+    "    ts = np.where(θs == θs_ch_)[0][0]\n",
+    "    p  = np.where(φ  == φ_ch_)[0][0]\n",
+    "    \n",
+    "    si = data[w, tp, ts, p, :, 0, :]\n",
+    "    sq = data[w, tp, ts, p, :, 1, :]\n",
+    "    su = data[w, tp, ts, p, :, 2, :]\n",
+    "        \n",
+    "    # Do not convert to reflectance quantity here\n",
     "    return dop(si, sq, su)\n",
     "\n",
     "# Get Natraj et al. reference data\n",
@@ -301,7 +345,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d14677c3",
    "metadata": {
     "scrolled": false
    },
@@ -309,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "492760672aaa41bb82e6b4eb7da36cd1",
+       "model_id": "4486e308b18d4136b4199e2806d892a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -323,13 +366,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94b5339ae8ea4375998c3ca7e1709db7",
+       "model_id": "819a2b7988564dea96f0887d8105d2c3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'error_y': {'array': array([1.88926598, 0.53512009, 0.18739859, 0.05033294]),\n",
+       "    'data': [{'error_y': {'array': array([2.66820341, 0.98733441, 0.24778177, 0.07098833]),\n",
        "   …"
       ]
      },
@@ -373,12 +416,6 @@
     "           λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui,\n",
     "           τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui):\n",
     "    \n",
-    "    if source_selected == 'chowdhary':\n",
-    "        data_select = 'tests/chowdhary/' + data_select + '/trials_10/'\n",
-    "        \n",
-    "        if data_select2 != 'None':\n",
-    "            data_select2 = 'tests/chowdhary/' + data_select2 + 'trials_10/'\n",
-    "        \n",
     "    # Load Mitsuba data\n",
     "    model_file = '../' + data_select + model_select + '_mts.npy'\n",
     "    data_mts = np.load(model_file)\n",
@@ -403,6 +440,20 @@
     "            else:\n",
     "                data_mts_new2 = get_mts_ch_stokes(data_mts2, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
     "\n",
+    "    elif source_selected == 'zhai':\n",
+    "        if stokes_select == 'DOP':\n",
+    "            data_ref_new = get_ref_zh_dop(model_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "            data_mts_new = get_mts_zh_dop(data_mts, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "        else:\n",
+    "            data_ref_new = get_ref_zh_stokes(model_select, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "            data_mts_new = get_mts_zh_stokes(data_mts, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "\n",
+    "        if data_mts2 is not None:\n",
+    "            if stokes_select == 'DOP':\n",
+    "                data_mts_new2 = get_mts_zh_dop(data_mts2, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "            else:\n",
+    "                data_mts_new2 = get_mts_zh_stokes(data_mts2, stokes_select, λ_ch_ui, θp_ch_ui, θs_ch_ui, φ_ch_ui)\n",
+    "        \n",
     "    elif source_selected == 'natraj':\n",
     "        if stokes_select == 'DOP':\n",
     "            data_ref_new = get_ref_na_dop(model_select, τ_na_ui, μp_na_ui, μs_na_ui, φ_na_ui)\n",
@@ -535,8 +586,17 @@
     "    ui.children = ui_const + ui_na\n",
     "    source_selected.value = 'natraj'\n",
     "    \n",
+    "def source_zh_click(_):        \n",
+    "    data_select.options = data_dir_zh\n",
+    "    data_select2.options = ['None'] + data_dir_zh\n",
+    "    model_select.options = models_ch_\n",
+    "    \n",
+    "    ui.children = ui_const + ui_ch\n",
+    "    source_selected.value = 'zhai'\n",
+    "    \n",
     "source_ch.on_click(source_ch_click)\n",
     "source_na.on_click(source_na_click)\n",
+    "source_zh.on_click(source_zh_click)\n",
     "\n",
     "display(ui)\n",
     "fig"
@@ -545,7 +605,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9037f6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -567,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
