--- a/notebooks/compare_trials_conv.ipynb
+++ b/notebooks/compare_trials_conv.ipynb
@@ -76,7 +76,7 @@
     "λ_ch_      = np.array([350., 450., 550., 650.])\n",
     "θp_ch_     = np.array([30.0, 60.0])\n",
     "θs_ch_     = np.linspace(0.0, 60.0, 13)\n",
-    "φ_ch_      = np.array([0.0])\n",
+    "φ_ch_      = np.array([0.0, 60.0, 180.0, 240.0])\n",
     "\n",
     "# Where to pull Mitsuba data from\n",
     "data_dir_ch = ['mitsuba_data/chowdhary/']\n",
